# gamjam

./: .gitignore  CMakeLists.txt  README.md
assets/backgrounds/: background.4bpp
assets/fonts/: font.4bpp
assets/maps/: level_1.map  level_3.map  level_4.map
assets/palettes/: background.pal  font.pal  player.pal
assets/sprites/: object.4bpp  player.4bpp
include/: animation.h  collision.h  colour.h  constants.h  draw.h  entity.h  error.h  event.h  flag.h  framerate.h  levels.h  object.h  observer.h  player.h  state_machine.h  text.h  timer.h  utils.h  vector.h  window.h
scripts/: generate_assets.py
src/: animation.c  collision.c  colour.c  draw.c  entity.c  event.c  flag.c  framerate.c  levels.c  main.c  object.c  observer.c  player.c  state_machine.c  text.c  timer.c  utils.c  vector.c  window.c
tools/csprite/: pyproject.toml
tools/csprite/src/CSprite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/csprite/src/csprite/: display.py  graphics.py  map.py  palette.py  shared.py  sprite.py
tools/csprite/src/csprite/templates/: graphics.txt
tools/pysprite/: README.md  pyproject.toml
tools/pysprite/src/PySprite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/pysprite/src/pysprite/: app.py
tools/pysprite/src/pysprite/canvas/: canvas.py  palette.py  palette_group.py  spritesheet.py
tools/pysprite/src/pysprite/widgets/: canvas.py  colour_selector.py  layout.py  palette.py  palette_group.py  spritesheet.py
tools/pytile/: README.md  pyproject.toml
tools/pytile/src/PyTile.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
(+5 files in other folders)
