[project]
name = "CSprite"
requires-python = ">=3.12"
version = "0.0.1"
authors = [
    {name = "Ronan Lawlor", email = "ronanlawlor2001@gmail.com"}
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
csprite = ["**/*.txt"]
